package com.ProjectGames.controller;

import com.ProjectGames.controller.tictactoe.ITTTPlayer;

public interface IPlayerGeneral extends ITTTPlayer {


}
