package com.ProjectGames.model;

public enum StatisticValue {

    WIN, LOSE, DRAW

}
