package com.ProjectGames.model;

import java.util.ArrayList;

public class StatisticsPlayer {

    private ArrayList<Statistic> listStatistics = new ArrayList<>();

    public ArrayList<Statistic> getListStatistics() {
        return listStatistics;
    }

    public void setListStatistics(ArrayList<Statistic> listStatistics) {
        this.listStatistics = listStatistics;
    }

}
