package com.ProjectGames.model;

public enum TypeGame {

    TICTACTOE, HANGMAN

}
