package com.ProjectGames.view;

public class MenuView {
}
